--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/garbage-piano",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -33,6 +33,9 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "docs",
+              "baseHref" : "/garbage-piano/",
+              "deployUrl": "/garbage-piano/",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
