Add Angular Material
- See https://material.angular.io/
- Used ng add @angular/material with options:
  - prebuilt theme: Indigo/Pink: https://material.angular.io?theme=indigo-pink
  - HammerJS for gesture recognition
  - Set up browser animations for Angular Material

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -34,7 +35,7 @@
           "configurations": {
             "production": {
               "outputPath": "docs",
-              "baseHref" : "/garbage-piano/",
+              "baseHref": "/garbage-piano/",
               "deployUrl": "/garbage-piano/",
               "fileReplacements": [
                 {
@@ -90,6 +91,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -121,6 +123,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "garbage-piano"
 }
